pytest.err
============================= test session starts =============================
platform win32 -- Python 3.14.2, pytest-9.0.2, pluggy-1.6.0 -- C:\Users\ELITE\AppData\Local\Programs\Python\Python314\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\ELITE\Desktop\bjhunt alpha
configfile: pyproject.toml
plugins: anyio-4.12.1, asyncio-1.3.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
__________________ ERROR collecting tests/test_strategic.py ___________________
..\..\AppData\Local\Programs\Python\Python314\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\..\AppData\Local\Programs\Python\Python314\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\AppData\Local\Programs\Python\Python314\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
..\..\AppData\Local\Programs\Python\Python314\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_strategic.py:27: in <module>
    from bjhunt_alpha.strategic.brain import (
bjhunt_alpha\strategic\__init__.py:22: in <module>
    from .knowledge import KnowledgeDatabase, CVEEntry, AttackTechnique
E     File "C:\Users\ELITE\Desktop\bjhunt alpha\bjhunt_alpha\strategic\knowledge.py", line 585
E       ),
E       ^
E   SyntaxError: positional argument follows keyword argument
=========================== short test summary info ===========================
ERROR tests/test_strategic.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 14.98s ==============================
